Uređen home page, dodane slike i prommjenjen stil, dodani gumbovi za login i register.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,36 @@
 </head>
 
 <body>
+    <div class="container">
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#">
+                    <img src="images/logo.png" alt="Logo" width="150" height="100">
+                </a>
+                <h1 class="title">Schedulify</h1>
+                <div class="ml-auto">
+                    <a class="button btn-primary mr-2" href="#">Login</a>
+                    <a class="button btn-secondary" href="#">Register</a>
+                </div>
+            </nav>
+        </header>
+        <main>
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="images/scheduler.png" alt="Illustration" class="img-fluid">
+                </div>
+                <div class="col-md-6">
+                    <h2>Manage your time effectively</h2>
+                    <p>With Schedulify, you can manage your time effectively by scheduling your tasks and events. You can
+                        also set reminders for your tasks and events so that you never miss them.</p>
+                    <a class="button2 btn-primary" href="#">Get Started</a>
+                </div>
+            </div>
+            <footer class="footer">
+                <p>&copy; 2024 Schedulify. All Rights Reserved.</p>
+            </footer>
+        </main>
+    </div>
 
 </body>
 
