--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <h2>Manage your time effectively</h2>
                     <p>With Schedulify, you can manage your time effectively by scheduling your tasks and events. You can
                         also set reminders for your tasks and events so that you never miss them.</p>
-                    <a class="button2 btn-primary" href="#">Get Started</a>
+                    <a class="button2 btn-primary" href="./schedule.html">Get Started</a>
                 </div>
             </div>
             <footer class="footer">
