dodavanje id-eva buttonima za login i register

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 </a>
                 <h1 class="title">Schedulify</h1>
                 <div class="ml-auto">
-                    <a class="button btn-primary mr-2" href="#">Login</a>
-                    <a class="button btn-secondary" href="#">Register</a>
+                    <a class="button btn-primary mr-2" href="#" id="loginBtn">Login</a>
+                    <a class="button btn-secondary" href="#" id="registerBtn">Register</a>
                 </div>
             </nav>
         </header>
