--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10.15.5/dist/sweetalert2.min.css">
     <title>Schedulify</title>
 </head>
 
@@ -20,6 +21,13 @@
                 <div class="ml-auto">
                     <a class="button btn-primary mr-2" href="#" id="loginBtn">Login</a>
                     <a class="button btn-secondary" href="#" id="registerBtn">Register</a>
+                    <div class="dropdown" id="userDropdown" style="display:none;">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="userDropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        </button>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdownMenu">
+                            <a class="dropdown-item" href="#" id="logoutBtn">Logout</a>
+                        </div>
+                    </div>
                 </div>
             </nav>
         </header>
@@ -32,7 +40,7 @@
                     <h2>Manage your time effectively</h2>
                     <p>With Schedulify, you can manage your time effectively by scheduling your tasks and events. You can
                         also set reminders for your tasks and events so that you never miss them.</p>
-                    <a class="button2 btn-primary" href="./schedule.html">Get Started</a>
+                    <a class="button2 btn-primary" href="#" id="getStartedBtn">Get Started</a>
                 </div>
             </div>
             <footer class="footer">
@@ -40,7 +48,49 @@
             </footer>
         </main>
     </div>
+    
+    <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="loginModalLabel">Login</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" id="modalBody">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="registerModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="registerModalLabel">Register</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" id="registerModalBody">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.15.5/dist/sweetalert2.min.js"></script>
+    <script src="common.js"></script>
+    <script src="login.js"></script>
+    <script src="register.js"></script>
 </body>
 
 </html>
